# sqlservice

./: .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  DEVGUIDE.rst  LICENSE.rst  MANIFEST.in  Makefile  README.rst  dev-requirements.txt  pylintrc  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tasks.py  tox.ini
.github/workflows/: main.yml
docs/: Makefile  api.rst  async_database.rst  async_session.rst  client.rst  conf.py  database.rst  event.rst  index.rst  installation.rst  migrating_to_v2.0.rst  migration_2.0.rst  model.rst  session.rst  versioning.rst
sqlservice/: __init__.py  __pkg__.py  _compat.py  client.py  core.py  event.py  model.py  query.py  service.py  utils.py
src/sqlservice/: __init__.py  __pkg__.py  __version__.py  _compat.py  async_database.py  async_session.py  client.py  core.py  database.py  database_abc.py  database_settings.py  event.py  model.py  query.py  session.py  utils.py
tests/: conftest.py  fixtures.py  test_async_database.py  test_async_session.py  test_client.py  test_database.py  test_event.py  test_model.py  test_query.py  test_service.py  test_session.py  test_utils.py
