[metadata]
name = sqlservice
author = Derrick Gilland
author_email = dgilland@gmail.com
url = https://github.com/dgilland/sqlservice
description = The missing SQLAlchemy ORM interface
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = sqlservice sqlalchemy orm database
license = MIT License
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Database
    Topic :: Database :: Front-Ends
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules


[options]
install_requires =
    pydash>=4.0.1
    SQLAlchemy>=1.0.0

[options.extras_require]
dev =
    coverage
    flake8
    mock
    pylint
    pytest
    pytest-cov
    Sphinx
    sphinx-rtd-theme
    tox
    twine
    wheel

[bdist_wheel]
universal = 1
