[metadata]
name = sqlservice
version = 1.2.1
author = Derrick Gilland
author_email = dgilland@gmail.com
url = https://github.com/dgilland/sqlservice
description = The missing SQLAlchemy ORM interface
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = sqlservice sqlalchemy orm database
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Database
    Topic :: Database :: Front-Ends
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
install_requires =
    SQLAlchemy>=1.0.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    coverage
    flake8
    pydash
    pylint
    pytest
    pytest-cov
    Sphinx
    sphinx-rtd-theme
    tox
    twine
    wheel

[bdist_wheel]
python-tag = py3
