[metadata]
name = sqlservice
version = 1.2.1
author = Derrick Gilland
author_email = dgilland@gmail.com
url = https://github.com/dgilland/sqlservice
description = The missing SQLAlchemy ORM interface
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = sqlservice sqlalchemy orm database
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Database
    Topic :: Database :: Front-Ends
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
install_requires =
    SQLAlchemy>=1.0.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    coverage
    docformatter
    flake8
    flake8-black
    flake8-bugbear
    flake8-isort
    invoke
    isort
    pydash
    pylint
    pytest
    pytest-cov
    pytest-flake8
    pytest-pylint
    Sphinx
    sphinx-rtd-theme
    tox
    twine
    wheel

[bdist_wheel]
python-tag = py3

[flake8]
exclude = .tox,venv,env
max-line-length = 100
max-complexity = 12
# F401 - `module` imported but unused
# F811 - redefinition of unused `name` from line `N`
# E203 - whitespace before ':'
# W503 - line break before binary operator
ignore = F401,F811,E203,W503

[tool:isort]
line_length=100
multi_line_output=3
lines_after_imports=2
combine_as_imports=true
include_trailing_comma=true
force_sort_within_sections=true

[tool:pytest]
filterwarnings =
    ignore::DeprecationWarning:jinja2.*:
    ignore::DeprecationWarning:jsonschema.*:
    ignore::DeprecationWarning:tenacity.*:
    ignore::urllib3.exceptions.InsecureRequestWarning::
    ignore:.*direct construction.*deprecated.*:DeprecationWarning::
junit_family = xunit2
addopts =
    --verbose
    --doctest-modules
    --no-cov-on-fail
    --cov-fail-under=100
    --cov-report=xml
    --cov-report=term-missing
    --junitxml=junit.xml
    --flake8
    --pylint

[coverage:run]
omit =
    */tests/*
    */test_*
